# wordle-app

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-frontend  README.md  docker-compose.yml  manage.py  output.txt  package-lock.json  package.json  pyproject.toml  release-tasks.sh  requirements.txt  startup-dev.sh
public/: index.html
ranker/: urls.py
ranker/core/: admin.py  apps.py  forms.py  models.py  models_ranker.py  rankings.py  serializers.py  urls.py  views.py
ranker/core/constants/: dictionary.json
ranker/core/migrations/: 0001_initial.py  0002_activewordle_dailywordle_game.py  0002_auto_20220420_0446.py  0005_player_email.py  (+10 more)
ranker/settings/: dev.py
ranker/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ranker/wordle/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/: App.vue  main.js  store.js
src/api/: auth.js  player.js  session.js  wordle.js
src/components/: BarChart.vue  EventCard.vue  Navbar.vue  NavbarComponent.vue  PlayerCard.vue  PlayerList.vue
src/layouts/: MainLayout.vue
src/router/: router.js
src/store/: auth.js  leaderboards.js  password.js  player.js  signup.js  store.js  types.js  wordle.js
src/translations/: en.js
src/views/: EventView.vue  Home.vue  HomeView.vue  Login.vue  LoginView.vue  Lost.vue  LostView.vue  PasswordReset.vue  PasswordResetConfirm.vue  PasswordResetView.vue  PlayersView.vue  Register.vue  RegisterView.vue  VerifyEmail.vue  Wordle.vue  WordleView.vue
src/wordle/: Keyboard.vue  README.md  WordleGame.vue  index.html  script.js  styles.css  words.ts
(+16 files in other folders)
