[tool.poetry]
name = "general-sports-ranker"
version = "0.1.0"
description = ""
authors = ["erickillian <erickillian39@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.0.3"
djangorestframework = "3.10.3"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
pandas = "^1.4.2"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
dj-rest-auth = {extras = ["with_social"], version = "^2.2.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
